--- a/android/BumbleBee/app/src/main/res/values/strings.xml
+++ b/android/BumbleBee/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Safely</string>
-    <string name="title_activity_main">Smotion Test</string>
+    <string name="title_activity_main">Safely</string>
     <string name="res_layout">RelativeLayout</string>
     <string name="menu_setting1">Delete log files</string>
     <string name="res_activity_realtime">Real Time</string>
